--- a/preamble.tex
+++ b/preamble.tex
@@ -435,6 +435,7 @@
 \newcommand*{\wc¬prerequisites}{\mathbf{p}}
 
 %\newcommand*{\serviceaccount}{\mathbb{A}}
+\newcommand*{\saX}{\mathbf{a}}
 \newcommand*{\sa¬storage}{\mathbf{s}}
 \newcommand*{\sa¬preimages}{\mathbf{p}}
 \newcommand*{\sa¬requests}{\mathbf{l}}
@@ -516,8 +517,8 @@
 
 % Used for \recenthistory
 \newcommand*{\rh¬headerhash}{h}
-\newcommand*{\rh¬stateroot}{s}
 \newcommand*{\rh¬accoutlogsuperpeak}{b}
+\newcommand*{\rh¬stateroot}{s}
 \newcommand*{\rh¬reportedpackagehashes}{\mathbf{p}}
 
 
