PVM invocations macrofied

--- a/text/beefy.tex
+++ b/text/beefy.tex
@@ -4,6 +4,6 @@ For each finalized block $\block$ which a validator imports, said validator shal
 
 Formally, let $\mathbf{F}\sub{v}$ be the signed commitment of validator index $v$ which will be published:
 \begin{align}\label{eq:beefysignedcommitment}
-  \mathbf{F}\sub{v} &\equiv \signdata_{\activeset'\sub{v}}(\mathsf{X}_B\concat\keccak(\Fmmrencode{\text{last}(\recenthistory)_\mathbf{b}}))\\
+  \mathbf{F}\sub{v} &\equiv \signdata_{\activeset'\sub{v}}(\mathsf{X}_B \concat \text{last}(\recenthistory)_\rh¬accoutlogsuperpeak)\\
   \mathsf{X}_B &= \token{\$jam\_beefy}
 \end{align}
